opam-version: "2.0"
version: "1.0"
maintainer: "kay-uwe@kirsteinhome.ch"
authors: ["Kay-Uwe Kirstein"]
dev-repo: "https://github.com/kkirstein/ocaml-playground.git"
license: "MIT"
build: [
  ["jbuilder" "build" "--only" "benchmark" "--root" "." "-j" jobs "@install"]
]
depends: [
	"dune" {build}
	"cmdliner"
	"lwt"
	"lwt_ppx"
	"num"
	"zarith"
	"zmq-lwt"
	"listx"
	"alcotest" {test}
]
