opam-version: "2.0"
version: "1.0"
maintainer: "kay-uwe@kirsteinhome.ch"
authors: ["Kay-Uwe Kirstein"]
dev-repo: "https://github.com/kkirstein/ocaml-playground.git"
license: "MIT"
build: [
	["dune" "subst"] {pinned}
	["dune" "build" "-p" name "-j" jobs]
	["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
	"dune" {build}
	"cmdliner"
	"stb_image_write"
	"lwt"
	"lwt_ppx"
	"zarith"
	"zmq-lwt"
	"listx"
	"alcotest" {with-test}
]
