opam-version: "2.0"
version: "0.0.1"
maintainer: "kay-uwe@kirsteinhome.ch"
authors: ["Kay-Uwe Kirstein"]
synopsis: "Implementation of Grammar of Graphics to generate various charts"
dev-repo: "https://github.com/kkirstein/ocaml-playground.git"
license: "MIT"
build: [
	["dune" "subst"] {pinned}
	["dune" "build" "-p" name "-j" jobs]
	["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
	"dune" {build}
	"alcotest" {with-test}
]
